--- a/my-first-website.html
+++ b/my-first-website.html
@@ -5,7 +5,7 @@
         </head>
             <body>
               hello,world!
-              welcome to my first page!s  
+              welcome to my first page  
             </body>
 
 
