--- a/my-first-website.html
+++ b/my-first-website.html
@@ -4,7 +4,7 @@
             <title>my first webpage!</title>
         </head>
             <body>
-                <h1>My Tirst Webpage</h1>
+                <h1>My first Webpage</h1>
                 <h2>Written with a little guidance from Moringa School</h2>
 
                 <p>hello, world!</p>
