--- a/my-first-website.html
+++ b/my-first-website.html
@@ -10,6 +10,15 @@
                 <p>hello, world!</p>
 
                 <p>welcome to my first webpage!</p> 
+
+                <p>Here are some things I'm going to learn about coding:</p>
+                <ol>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JAVASCRIPT</li>
+                    <li>And a lot more</li>
+
+                </ol>
             </body>
 
 
