--- a/my-first-website.html
+++ b/my-first-website.html
@@ -12,12 +12,18 @@
                 <p>welcome to my first webpage!</p> 
 
                 <p>Here are some things I'm going to learn about coding:</p>
-                <ol>
+                <ul>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>JAVASCRIPT</li>
                     <li>And a lot more</li>
 
+                </ul>
+                <ol>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JAVASCRIPT</li>
+                    <li>And a lot more</li>
                 </ol>
             </body>
 
