this commit change something

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -25,7 +25,17 @@
                     <li>JAVASCRIPT</li>
                     <li>And a lot more</li>
                 </ol>
+
+                <p>welcome to my<strong>first web page</strong></p>
+
+                <h2>written with a little guidance from <em>moringa school</em></h2>
+
+                <p>check out <a href="http://moringaschool.com/">moringa school</a>.it is a great place to learn web development skills!</p>
                 
+
+                <img src="elephant.jpg" alt="A photo of an elephant">
+
+
             </body>
 
 
