--- a/my-first-website.html
+++ b/my-first-website.html
@@ -2,6 +2,10 @@
     <html>
         <head>
             <title>my first webpage!</title>
+            <link href="css/styles.css" rel="stylesheet" type="text/css">
+            h1 {
+                color: blue;
+            }
         </head>
             <body>
                 <h1>My first Webpage</h1>
