this commit add something

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -6,6 +6,11 @@
         </head>
             <body>
                 <h1>My first Webpage</h1>
+                <h1>{
+                    color: blue;
+                    
+                }
+                </h1>
                 <h2>Written with a little guidance from Moringa School</h2>
 
                 <p>hello, world!</p>
