add strong tag and em tag and img and add style.css

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -6,11 +6,11 @@
         </head>
             <body>
                 <h1>My first Webpage</h1>
-                <h2>Written with a little guidance from Moringa School</h2>
+                <h2>Written with a little guidance from <em>moringa school</em></h2>
 
                 <p>hello, world!</p>
 
-                <p>welcome to my first webpage!</p> 
+                <p>welcome to <strong>first webpage!</strong></p> 
 
                 <p>Here are some things I'm going to learn about coding:</p>
                 <ul>
@@ -20,12 +20,6 @@
                     <li>And a lot more</li>
 
                 </ul>
-                <ol>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JAVASCRIPT</li>
-                    <li>And a lot more</li>
-                </ol>
 
                 <p>welcome to my<strong>first web page</strong></p>
 
@@ -34,8 +28,8 @@
                 <p>check out <a href="http://moringaschool.com/">moringa school</a>.it is a great place to learn web development skills!</p>
                 
 
-                <img src="elephant.jpg" alt="A photo of an elephant">
-
+                <img src="/home/ismail/Documents/moringa-school-projects/my-first-website/img/elephant.jpg" alt="A photo of an elephant">
+                
 
             </body>
 
