--- a/my-favourite-things.html
+++ b/my-favourite-things.html
@@ -20,5 +20,6 @@
                 <li>Fish</li>
             </ol>
         <p>these are are my Favourite friends and foods</p>
-        
+        <p>ugali is healthier than the other foods</p>
+
     </body>
