--- a/my-first-website.html
+++ b/my-first-website.html
@@ -29,6 +29,7 @@
                 
 
                 <img src="/home/ismail/Documents/moringa-school-projects/my-first-website/img/elephant.jpg" alt="A photo of an elephant">
+                <p>here is a link to <a href="/home/ismail/Documents/moringa-school-projects/my-first-website/my-favourite-things.html">favourite things</a></p>
                 
 
             </body>
