--- a/my-favourite-things.html
+++ b/my-favourite-things.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <h1>My Favourite things</h1>
+        <link href="css/mazo.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h2>Best friends</h2>
